# open5gs

configs/: 5gc.yaml.in  meson.build  minimal.yaml.in
configs/open5gs/: amf.yaml.in  smf.yaml.in  upf.yaml.in
lib/app/: ogs-config.c  ogs-config.h
lib/asn1c/: meson.build
lib/asn1c/ngap/: NGAP_ProtocolExtensionField.c  NGAP_ProtocolIE-ContainerPair.c  NGAP_ProtocolIE-ContainerPair.h  NGAP_ProtocolIE-ContainerPairList.c  NGAP_ProtocolIE-ContainerPairList.h  meson.build  (+3 more)
lib/core/: ogs-3gpp-types.c  ogs-3gpp-types.h
lib/ngap/: conv.c  conv.h  message.h  ogs-ngap.h
lib/s1ap/: conv.c
lib/sctp/: ogs-sctp.h
src/amf/: 5gmm-sm.c  5gsm-sm.c  amf-sm.c  amf-sm.h  app.c  context.c  context.h  event.c  event.h  gmm-build.c  gmm-build.h  gmm-handler.c  gmm-handler.h  gmm-sm.c  init.c  kdf.c  kdf.h  meson.build  nas-path.c  nas-path.h  nas-security.c  nf-sm.c  ngap-build.c  ngap-build.h  ngap-handler.c  ngap-handler.h  ngap-path.c  ngap-path.h  ngap-sm.c  nnrf-build.c  nnrf-build.h  nnrf-handler.c  nnrf-handler.h  sbi-path.c  sbi-path.h  timer.c  timer.h
src/mme/: emm-build.c  emm-handler.c  emm-sm.c  esm-build.c  esm-handler.c  esm-handler.h  esm-sm.c  meson.build  mme-context.c  mme-context.h  mme-s11-build.c  mme-sm.c  nas-security.c  nas-security.h  s1ap-handler.c  s1ap-path.c  sgsap-build.c
src/smf/: nnrf-handler.c
tests/: meson.build
tests/app/: 5gc-init.c  app-init.c  meson.build  test-5gc.h  test-app.c  test-app.h  test-epc.h  test-packet.c  test-packet.h
tests/common/: 5gmm-build.c  5gmm-build.h  application.c  application.h  context.c  context.h  gmm-build.c  gmm-build.h  gtpu.c  gtpu.h  meson.build  ngap-build.c  ngap-build.h  sctp.c  sctp.h  test-app.h  test-common.h
tests/csfb/: abts-main.c  meson.build
tests/cups/: abts-main.c
tests/epc/: app-init.c  meson.build  test-epc.h
tests/minimal/: abts-main.c  meson.build  minimal-test.c
tests/mnc3/: abts-main.c  meson.build
tests/simple/: abts-main.c  meson.build
tests/unit/: nas-message-test.c
tests/volte/: abts-main.c  meson.build
(+36 files in other folders)
